kube/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mi-demo.local
      secretName: mi-demo-tls
  rules:
    - host: mi-demo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /readyz
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
